review for bug 739891
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@103710 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/pt-BR/channelsposter.lang
+++ b/pt-BR/channelsposter.lang
@@ -1,111 +1,84 @@
-
 ;Firefox Release Channels
-Firefox Release Channels
-
+Canais de Lançamento do Firefox
 
 ;Firefox Release Timeline
-Firefox Release Timeline
-
+Linha do Tempo de lançamentos do Firefox
 
 ;The Mozilla release process delivers new features, performance immprovements and security upgrades to users every six weeks.
-The Mozilla release process delivers new features, performance immprovements and security upgrades to users every six weeks.
-
+O ciclo de lançamentos da Mozilla disponibiliza novos recursos, melhorias de desempenho e atualizações de segurança aos seus usuários a cada seis semanas.
 
 ;This consists of four development channels producing concurrent releases of Firefox for Windows, Mac, Linux and Android.
-This consists of four development channels producing concurrent releases of Firefox for Windows, Mac, Linux and Android.
-
+Ele consiste de quatro canais de desenvolvimento produzindo diferentes versões do Firefox para Windows, Mac, Linux e Android.
 
 ;For:
-For:
-
+Para:
 
 ;Enjoy:
-Enjoy:
-
+Aproveite:
 
 ;Expect:
-Expect:
-
+Espere por:
 
 ;Early adopters and Mozilla fans
-Early adopters and Mozilla fans
-
+Usuários pioneiros e fãs da Mozilla
 
 ;Testing the next version of Firefox with stability
-Testing the next version of Firefox with stability
-
+Oportunidade de testar a próxima versão do Firefox com estabilidade
 
 ;Mostly stable builds that need fine tuning and majority add-on compatibility
-Mostly stable builds that need fine tuning and majority add-on compatibility
-
+Compilações mais estáveis que precisam de ajustes finos e compatibilidade com a grande maioria dos complementos
 
 ;Everyone! Released to the more than 400 million Firefox users worldwide
-Everyone! Released to the more than 400 million Firefox users worldwide
-
+Todos! Lançado para mais de 400 milhões de usuários do Firefox mundo afora
 
 ;The polished and stable features of Firefox that move the Web forward with great performance and unparalleled customization
-The polished and stable features of Firefox that move the Web forward with great performance and unparalleled customization
-
+Recursos refinados e estáveis do Firefox que levam a internet para a frente com desempenho personalização sem igual
 
 ;An awesome Web experience that answers to no one but you!
-An awesome Web experience that answers to no one but you!
-
+Uma experiância na internet que responde somente a você!
 
 ;Web/platform developers, early adopters and adventure seekers
-Web/platform developers, early adopters and adventure seekers
-
+Desenvolvedores, usuários avançados e caçadores de aventuras
 
 ;Access to experimental new features - your feedback helps determine what makes it to Beta
-Access to experimental new features - your feedback helps determine what makes it to Beta
-
+Acesso a novos recursos experimentais - sua opinião nos ajuda a determinar o que vai para o Beta
 
 ;Test builds with bugs and incompatible add-ons
-Test builds with bugs and incompatible add-ons
-
+Compilações de testes com bugs e complementos incompatíveis
 
 ;Platform developers and Mozilla contributors
-Platform developers and Mozilla contributors
-
+Desenvolvedores de plataforma e colaboradores Mozilla
 
 ;Access to cutting edge features still under active development
-Access to cutting edge features still under active development
-
+Acesso a novíssimos recursos ainda em desenvolvimento ativo
 
 ;Crashes, unstable test builds with bugs and incompatible add-ons
-Crashes, unstable test builds with bugs and incompatible add-ons
-
+Travamentos, compilações de testes instáveis com bugs e complementos incompatíveis
 
 ;6 weeks
-6 weeks
-
+6 semanas
 
 ;Awesomeness lands on Firefox Nightly
-Awesomeness lands on Firefox Nightly
-
+Inovações aterrisam no Firefox Nightly
 
 ;Stabilize on Firefox Aurora
-Stabilize on Firefox Aurora
-
+Estabilizam-se no Firefox Aurora
 
 ;Stabilize on Firefox Beta
-Stabilize on Firefox Beta
-
+Estabilizam-se no Firefox Beta
 
 ;Firefox Release!
-Firefox Release!
-
+Lançamento do Firefox!
 
 ;<i>More</i> awesomeness on Firefox Nightly
-<i>More</i> awesomeness on Firefox Nightly
-
+<i>Mais</i> inovações no Firefox Nightly
 
 ;<i>Even More</i> awesomeness on Firefox Nightly
-<i>Even More</i> awesomeness on Firefox Nightly
-
+<i>Ainda mais</i> inovações no Firefox Nightly
 
 ;Timeline
-Timeline
-
+Linha do Tempo
 
 ;Release
-Release
+Lançamento
+
