--- a/pt-BR/channelsposter.lang
+++ b/pt-BR/channelsposter.lang
@@ -35,19 +35,19 @@ Todos! Lançado para mais de 400 milhões de usuários do Firefox mundo afora
 Recursos refinados e estáveis do Firefox que levam a internet para a frente com desempenho personalização sem igual
 
 ;An awesome Web experience that answers to no one but you!
-Uma experiância na internet que responde somente a você!
+Uma experiência na internet que responde somente a você!
 
 ;Web/platform developers, early adopters and adventure seekers
 Desenvolvedores, usuários avançados e caçadores de aventuras
 
 ;Access to experimental new features - your feedback helps determine what makes it to Beta
-Acesso a novos recursos experimentais - sua opinião nos ajuda a determinar o que vai para o Beta
+Acesso a novos recursos experimentais - sua opinião nos ajudará a determinar o que vai para o Beta
 
 ;Test builds with bugs and incompatible add-ons
 Compilações de testes com bugs e complementos incompatíveis
 
 ;Platform developers and Mozilla contributors
-Desenvolvedores de plataforma e colaboradores Mozilla
+Desenvolvedores da plataforma e colaboradores da Mozilla
 
 ;Access to cutting edge features still under active development
 Acesso a novíssimos recursos ainda em desenvolvimento ativo
