update SL mobile, newsletter snippets
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@103712 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/sl/mobile.lang
+++ b/sl/mobile.lang
@@ -2,130 +2,129 @@
 
 
 ;Get Firefox for Android
-Get Firefox for Android
+Priskrbite si Firefox za Android
 
 
 ;Download for <span>Android</span>
-Download for <span>Android</span>
+Prenesite si <span>Android</span>
 
 
 ;Free from the Android Market
-Free from the Android Market
+Brezplaöno z Android Market
 
 
 ;Or visit <a %s>Firefox.com/m</a> on your phone.
-Or visit <a %s>Firefox.com/m</a> on your phone.
+Ali pa obiščite <a %s>Firefox.com/m</a> s svojim telefonom.
 
 
 ;Supported Devices
-Supported Devices
+Podprte naprave
 
 
 ;Get it from iTunes - FREE
-Get it from iTunes - FREE
+Prenos z iTunes - BREZPLAČEN
 
 
 ;Firefox Home for <span>iPhone</span>
-Firefox Home for <span>iPhone</span>
+Firefox Home za <span>iPhone</span>
 
 
 ;Access your Firefox history, bookmarks and open tabs on your iPhone.
-Access your Firefox history, bookmarks and open tabs on your iPhone.
+Dostop do vaše zgodovine za Firefox, zaznamkov in odprtih zavihkiv na vašem iPhone.
 
 
 ;Download Firefox to <span>Your Mobile</span>
-Download Firefox to <span>Your Mobile</span>
+Prenesite Firefox za <span>svoj mobilnik</span>
 
 
 ;Want to test the latest features?
-Want to test the latest features?
+Hočete testirati najnovejše funkcije?
 
 
 ;Get Firefox Home for iPhone
-Get Firefox Home for iPhone
+Prenesite si Firefox Home za iPhone
 
 
 ;Download Beta for Android
-Download Beta for Android
+Prenesite si Beta za Android
 
 
 ;Download
-Download
+Prenesi
 
 
 ;for
-for
+za
 
 
 ;Free from iTunes
-Free from iTunes
+Brezplačno z iTunes
 
 
 ;You’ll get to experience cutting-edge features and provide feedback to help refine and polish what will be in the final release.
-You’ll get to experience cutting-edge features and provide feedback to help refine and polish what will be in the final release.
-
+Okusili boste vrhunske funkcije, nam pa s svojo izkušnjo pomagali izboljšati in zbrusiti vsebino končne izdaje.
 
 ;Developer Tools
-Developer Tools
+Razvojna orodja
 
 
 ;You can install the mobile version of Firefox to our desktop computer in order to test, provide feedback, and build add-ons.
-You can install the mobile version of Firefox to our desktop computer in order to test, provide feedback, and build add-ons.
+Mobilno različico Firefoxa lahko namestite na svoj naš namizni računalnik, da si jo ogledate, da poveste svoje mnenje in da si gradite dodatke.
 
 
 ;Connect With Firefox for Mobile:
-Connect With Firefox for Mobile:
+Spoznajte se s Firefoxom za mobilnike:
 
 
 ;Monthly newsletter
-Monthly newsletter
+Mesečne novice
 
 
 ;Follow us
-Follow us
+Ostanite z nami v stiku
 
 
 ;Become a fan
-Become a fan
+Postanite ljubitelj
 
 
 ;Firefox is full of innovations that let you type less, browse more and get to the Web quickly and easily.
-Firefox is full of innovations that let you type less, browse more and get to the Web quickly and easily.
+Firefox vsebuje cel kup novosti, sedaj lahko manj tipkate in več brskate in hitreje in enostavneje letate po spletu.
 
 
 ;Freedom from typing
-Freedom from typing
+Rešite se tipkanja
 
 
 ;The Awesome Screen learns your favorite sites so you can browse with little or no typing.
-The Awesome Screen learns your favorite sites so you can browse with little or no typing.
+Pametna vrstica za naslove si zapomni vaša priljubljena spletna mesta, tako da vam je komaj kaj še treba tipkati.
 
 
 ;Best of both worlds
-Best of both worlds
+Optimalno za vse
 
 
 ;Firefox for Android is now redesigned and optimized for the way you browse on phones and tablets.
-Firefox for Android is now redesigned and optimized for the way you browse on phones and tablets.
+Firefox  za Android smo sedaj preoblikovali in optimizirali za brskanje na telefonih in tablicah.
 
 
 ;Browse quick and easy
-Browse quick and easy
+Brskajte hitro in brez težav
 
 
 ;Features like Sync, tabbed browsing and one-touch bookmarking mean everything you want is close at hand.
-Features like Sync, tabbed browsing and one-touch bookmarking mean everything you want is close at hand.
+S funkcijami, kot so Sync, brskanje po zavihkih in oznake na en klick imate vse, kar potrebujete na dosegu roke.
 
 
 ;<a %s>Need help?</a> Visit our Firefox for Android Support site.
-<a %s>Need help?</a> Visit our Firefox for Android Support site.
+<a %s>Rabite pomoč?</a> Obiščite pomoč za Firefox za Android.
 
 
 ;Download and test the build that’s right for you.
-Download and test the build that’s right for you.
+Prenesite in testirajte gradnjo, ki vam najbolj odgovarja.
 
 
 ;See all our channels for mobile »
-See all our channels for mobile »
+Tukaj so vsi kanali za mobilnike »
 
 
