--- a/sl/newsletter.lang
+++ b/sl/newsletter.lang
@@ -90,7 +90,7 @@ Preberite si najnovejše nasvete in trike, da dobite kar največ iz vašega najl
 
 
 ;Firefox Mobile
-Firefox Mobile
+Firefox za mobilnike
 
 
 ;Learn about the hottest new add-ons and features for Firefox mobile.
@@ -126,7 +126,7 @@ Odjava naročnine
 
 
 ;Check here if you’d like to be removed from all Mozilla emails
-Check here if you’d like to be removed from all Mozilla emails
+Odkljukajte tukaj, če želite odjaviti vsae naročnine pri Mozilli
 
 
 ;Remove me from all Mozilla emails
@@ -138,42 +138,42 @@ Shrani nastavitve
 
 
 ;Thanks for updating your email preferences.
-Thanks for updating your email preferences.
+Hvala vam, ker ste posobili svoje poštne nastavitve.
 
 
 ;You've been unsubscribed.
-You've been unsubscribed.
+Sedaj ste odjavljeni.
 
 
 ;We’re sorry to see you go. Would you mind telling us why you’re leaving?
-We’re sorry to see you go. Would you mind telling us why you’re leaving?
+Žal nam je, da se poslavljate. Bi nam lahko zaupali, zakaj nas zapuščate?
 
 
 ;You send too many emails.
-You send too many emails.
+Dobivam preveč pošte.
 
 
 ;Your content wasn't relevant to me.
-Your content wasn't relevant to me.
+Vađa vsebina me ni zanimala.
 
 
 ;Your email design was too hard to read.
-Your email design was too hard to read.
+Vašo pošto je bilo težko brati.
 
 
 ;I didn't sign up for this.
-I didn't sign up for this.
+Za to se nisem prijavil.
 
 
 ;I'm keeping in touch with Mozilla on Facebook and Twitter instead.
-I'm keeping in touch with Mozilla on Facebook and Twitter instead.
+V stiku z Mozillo sem raje na Facebooku in Twitterju.
 
 
 ;Submit
-Submit
+Pošlji
 
 
 ;Thanks for telling us why you’re leaving.
-Thanks for telling us why you’re leaving.
+Hvala, da ste nam povedali svoje razloge za odjavo.
 
 
