German translation of strings for survey1.lang
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@103718 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/de/survey1.lang
+++ b/de/survey1.lang
@@ -2,11 +2,11 @@
 
 
 ;Thank you for helping with this research. We would like to ask you some questions about using the internet, in particular the browser software you use to do this. The term “browser” is the name of the application which displays web pages and allows you to surf the internet. The questionnaire should take about 3 minutes to complete should you qualify.
-Thank you for helping with this research. We would like to ask you some questions about using the internet, in particular the browser software you use to do this. The term “browser” is the name of the application which displays web pages and allows you to surf the internet. The questionnaire should take about 3 minutes to complete should you qualify.
+Vielen Dank, dass Sie uns bei dieser Untersuchung helfen. Wir möchten Ihnen einige Fragen zur Verwendung des Internets stellen, besonders dazu, welches Browser-Programm Sie dazu verwenden. Der Begriff „Browser“ ist der Name der Anwendung,die Internetseiten anzeigt und Ihnen das Surfen im Internet ermöglicht. Das Ausfüllen des Fragebogens sollte etwa 3 Minuten in Anspruch nehmen, falls Sie zur Zielgruppe gehören.
 
 
 ;Which of the following age bands do you fall into?
-Which of the following age bands do you fall into?
+Zu welcher der folgenden Altersgruppen gehören Sie?
 
 
 ;16-24
@@ -34,19 +34,19 @@ Which of the following age bands do you fall into?
 
 
 ;Please indicate your gender
-Please indicate your gender
+Bitte geben Sie Ihr Geschlecht an
 
 
 ;Male
-Male
+Männlich
 
 
 ;Female
-Female
+Weiblich
 
 
 ;Can I just check, which of the following web browsers do you use on your desktop computer or laptop at the moment, either at home or at work?
-Can I just check, which of the following web browsers do you use on your desktop computer or laptop at the moment, either at home or at work?
+Kann ich kurz überprüfen, welchen der folgenden Webbrowser Sie gerade auf Ihrem Desktop-Rechner oder Laptop, zu Hause oder auf der Arbeit, verwenden?
 
 
 ;Apple Safari
@@ -70,151 +70,151 @@ Opera
 
 
 ;Another browser
-Another browser
+Einen anderen Browser
 
 
 ;Don’t know
-Don’t know
+Weiß nicht
 
 
 ;How likely or unlikely are you to recommend Firefox to a friend or colleague?
-How likely or unlikely are you to recommend Firefox to a friend or colleague?
+Wie wahrscheinlich oder unwahrscheinlich ist es, dass Sie Firefox einem Freund oder Kollegen empfehlen?
 
 
 ;I am very likely and would consider making a recommendation without being asked
-I am very likely and would consider making a recommendation without being asked
+Es ist sehr wahrscheinlich und würde ihn vielleicht auch empfehlen, ohne gefragt zu werden
 
 
 ;I am quite likely to recommend Firefox and would do so if I was asked
-I am quite likely to recommend Firefox and would do so if I was asked
+Es ist ziemlich wahrscheinlich, dass Firefox empfehlen würde und würde das tun, wenn ich gefragt würde
 
 
 ;I am neither likely nor unlikely
-I am neither likely nor unlikely
+Es ist weder wahrscheinlich, noch unwahrscheinlich
 
 
 ;I am quite unlikely to recommend Firefox
-I am quite unlikely to recommend Firefox
+Es ist ziemlich unwahrscheinlich, dass ich Firefox empfehlen würde
 
 
 ;I am very unlikely to recommend Firefox and would even consider recommending against using Firefox
-I am very unlikely to recommend Firefox and would even consider recommending against using Firefox
+Es ist sehr unwahrscheinlich, dass ich Firefox empfehlen würde und ich würde vielleicht sogar von ihm abraten
 
 
 ;And how much do you like or dislike Firefox?
-And how much do you like or dislike Firefox?
+Wie gut oder nicht gefällt Ihnen Firefox?
 
 
 ;Dislike a great deal
-Dislike a great deal
+Gefällt mir gar nicht
 
 
 ;Dislike a little
-Dislike a little
+Gefällt mir ein bisschen nicht
 
 
 ;Neither like nor dislike
-Neither like nor dislike
+Gefällt mir weder, noch gefällt er mir nicht
 
 
 ;Like a little
-Like a little
+Gefällt mir ein bisschen
 
 
 ;Like a great deal
-Like a great deal
+Gefällt mir sehr
 
 
 ;So overall, taking everything into account, how satisfied or dissatisfied are you with Firefox?
-So overall, taking everything into account, how satisfied or dissatisfied are you with Firefox?
+Wenn Sie alles berücksichtigen, wie zufrieden oder unzufrieden sind Sie mit Firefox?
 
 
 ;Extremely dissatisfied
-Extremely dissatisfied
+Äußerst unzufrieden
 
 
 ;Dissatisfied
-Dissatisfied
+Unzufrieden
 
 
 ;Somewhat dissatisfied
-Somewhat dissatisfied
+Ein bisschen unzufrieden
 
 
 ;Neither satisfied nor dissatisfied
-Neither satisfied nor dissatisfied
+Weder zufrieden noch unzufrieden
 
 
 ;Somewhat satisfied
-Somewhat satisfied
+Ein bisschen zufrieden
 
 
 ;Satisfied
-Satisfied
+Zufrieden
 
 
 ;Extremely satisfied
-Extremely satisfied
+Äußerst zufrieden
 
 
 ;For each of the following statements, could you please indicate whether you:
-For each of the following statements, could you please indicate whether you:
+Würden Sie bitte für jede der folgenden Aussagen angeben, ob Sie:
 
 
 ;Were aware of this and believe it to be correct
-Were aware of this and believe it to be correct
+Davon wussten und es für richtig halten
 
 
 ;Have seen this but were unsure if it was right
-Have seen this but were unsure if it was right
+Es gesehen haben aber nicht sicher waren, ob es richtig ist
 
 
 ;Have not heard of this before today, or I don’t know
-Have not heard of this before today, or I don’t know
+Bisher noch nicht davon gehört haben oder es nicht wissen
 
 
 ;There are no right or wrong answers, so please answer as honestly as you can.
-There are no right or wrong answers, so please answer as honestly as you can.
+Es gibt keine richtigen oder falschen Antworten, antworten Sie daher bitte so ehrlich wie möglich.
 
 
 ;A. Firefox is made by Mozilla
-A. Firefox is made by Mozilla
+A. Firefox wird von Mozilla entwickelt
 
 
 ;B. Mozilla is a non-profit organisation
-B. Mozilla is a non-profit organisation
+B. Mozilla ist eine gemeinnützige Organisation
 
 
 ;C. Mozilla’s mission is to make the web a better place
-C. Mozilla’s mission is to make the web a better place
+C. Mozillas Mission ist es, das Internet zu einem besseren Ort zu machen
 
 
 ;D. Firefox was the first web browser
-D. Firefox was the first web browser
+D. Firefox war der erste Webbrowser
 
 
 ;Which of the following would you say is your browser of choice?
-Which of the following would you say is your browser of choice?
+Welchen der folgenden würden Sie als Ihren Browser der Wahl bezeichnen?
 
 
 ;Which if any of the following Firefox services had you heard of before today?
-Which if any of the following Firefox services had you heard of before today?
+Von welchem der folgenden Firefox-Dienste haben Sie bisher gehört, wenn überhaupt?
 
 
 ;Firefox Sync
-Firefox Sync
+Firefox-Sync
 
 
 ;A service that gives you secure access to your bookmarks, open tabs, and browsing history from any computer or smartphone with Firefox
-A service that gives you secure access to your bookmarks, open tabs, and browsing history from any computer or smartphone with Firefox
+Ein Dienst, der Ihnen sicheren Zugang zu Ihren Lesezeichen, geöffneten Tabs und Ihrer Surf-Chronik von einem beliebigen Rechner oder Smartphone mit Firefox ermöglicht
 
 
 ;Firefox for Android
-Firefox for Android
+Firefox für Android
 
 
 ;The Firefox browser on an Android smartphone or tablet
-The Firefox browser on an Android smartphone or tablet
+Der Firefox-Browser auf einem Android-Smartphone oder -Tablet
 
 
 ;Mozilla Persona
@@ -222,186 +222,186 @@ Mozilla Persona
 
 
 ;An identity system that allows you to sign in to sites using an email address you choose.
-An identity system that allows you to sign in to sites using an email address you choose.
+Ein Identitätssystem, das Ihnen die Anmeldung auf Websites mit einer E-Mail-Adresse Ihrer Wahl ermöglicht.
 
 
 ;Mozilla Marketplace
-Mozilla Marketplace
+Mozilla-Marktplatz
 
 
 ;Mozilla's online store for Open Web apps
-Mozilla's online store for Open Web apps
+Mozillas Online-Laden für Anwendungen des offenen Internets
 
 
 ;Addons for Firefox
-Addons for Firefox
+Add-ons für Firefox
 
 
 ;Customisations you can make to Firefox to add more functionality to the browser.
-Customisations you can make to Firefox to add more functionality to the browser.
+Anpassungen, die Sie an Firefox vornehmen können, um dem Browser weitere Funktionen hinzuzufügen.
 
 
 ;None of these
-None of these
+Keiner davon
 
 
 ;Which if any of the following Firefox services are you using at the moment?
-Which if any of the following Firefox services are you using at the moment?
+Welchen der folgenden Firefox-Dienste verwenden Sie gerade, wenn überhaupt?
 
 
 ;Based on these descriptions, which if any, would you be interested in using in the future?
-Based on these descriptions, which if any, would you be interested in using in the future?
+Basierend auf diesen Beschreibungen, an der Nutzung welcher Dienste wären Sie in Zukunft interessiert, wenn überhaupt??
 
 
 ;Approximately how long have you been using Firefox?
-Approximately how long have you been using Firefox?
+Wie lange verwenden Sie Firefox schon ungefähr?
 
 
 ;Up to 6 months
-Up to 6 months
+Bis zu 6 Monate
 
 
 ;6 months to a year
-6 months to a year
+6 Monate bis ein Jahr
 
 
 ;1 to 2 years
-1 to 2 years
+1 bis 2 Jahre
 
 
 ;2 to 3 years
-2 to 3 years
+2 bis 3 Jahre
 
 
 ;3 to 4 years
-3 to 4 years
+3 bis 4 Jahre
 
 
 ;4 to 5 years
-4 to 5 years
+4 bis 5 Jahre
 
 
 ;More than 5 years
-More than 5 years
+Mehr als 5 Jahre
 
 
 ;Do you use any of the following to browse the internet?
-Do you use any of the following to browse the internet?
+Verwenden Sie einen der folgenden zum Surfen im Internet?
 
 
 ;Home PC or desktop computer
-Home PC or desktop computer
+Wohnzimmer-PC oder Desktop-PC
 
 
 ;Work PC or desktop computer
-Work PC or desktop computer
+Arbeits-PC oder Desktop-PC
 
 
 ;Home laptop
-Home laptop
+Laptop zu Hause
 
 
 ;Work laptop
-Work laptop
+Laptop auf der Arbeit
 
 
 ;Smartphone (eg: iPhone, Android phone)
-Smartphone (eg: iPhone, Android phone)
+Smartphone (z.B.: iPhone, Android-Handy)
 
 
 ;Tablet (eg: iPad)
-Tablet (eg: iPad)
+Tablet (z.B.: iPad)
 
 
 ;On average, approximately how many hours each day do you use the internet or browse web pages?
-On average, approximately how many hours each day do you use the internet or browse web pages?
+Wie viele Stunden verwenden Sie durchschnittlich ungefähr am Tag das Internet oder surfen auf Webseiten?
 
 
 ;Less than half an hour each day
-Less than half an hour each day
+Weniger als eine halbe Stunde pro Tag
 
 
 ;About an hour a day
-About an hour a day
+Ungefähr eine Stunde pro Tag
 
 
 ;2 hours a day
-2 hours a day
+2 Stunden pro Tag
 
 
 ;3 hours a day
-3 hours a day
+3 Stunden pro Tag
 
 
 ;4 hours a day
-4 hours a day
+4 Stunden pro Tag
 
 
 ;5 hours a day
-5 hours a day
+5 Stunden pro Tag
 
 
 ;More than 6 hours a day
-More than 6 hours a day
+Mehr als 6 Stunden pro Tag
 
 
 ;That is the end of the questionnaire. Thank you for your time.
-That is the end of the questionnaire. Thank you for your time.
+Dies ist das Ende des Fragebogens. Vielen Dank, dass Sie sich die Zeit genommen haben.
 
 
 ;Please enter a response
-Please enter a response
+Bitte geben Sie eine Antwort ein
 
 
 ;Illegal characters for single code input
-Illegal characters for single code input
+Unzulässige Zeichen für Eingabe einer Antwort ohne Mehrfachnennung
 
 
 ;Illegal characters for multi code input
-Illegal characters for multi code input
+Unzulässige Zeichen für Eingabe einer Antwort mit Mehrfachnennung
 
 
 ;Please enter numbers only
-Please enter numbers only
+Bitte geben Sie nur Zahlen ein
 
 
 ;Answer is outside of
-Answer is outside of
+Antwort liegt außerhalb von
 
 
 ;No answer code cannot be mixed with other codes
-No answer code cannot be mixed with other codes
+Code für „keine Antwort“ kann nicht mit anderen Codes kombiniert werden
 
 
 ;Too many replies maximum of …
-Too many replies maximum of …
+Zu viele Antworten, möglich sind maximal …
 
 
 ;Number of replies must be exactly …
-Number of replies must be exactly …
+Zahl der Antworten muss genau … sein
 
 
 ;Too many characters
-Too many characters
+Zu viele Zeichen
 
 
 ;Illegal string for this template
-Illegal string for this template
+Unzulässige Zeichenkette für diese Vorlage
 
 
 ;Click here to go back into the survey
-Click here to go back into the survey
+Klicken Sie hier, um zur Umfrage zurückzukehren
 
 
 ;Please answer highlighted question(s)
-Please answer highlighted question(s)
+Bitte beantworten Sie die hervorgehobene(n) Frage(n)
 
 
 ;Please select one answer only.
-Please select one answer only.
+Bitte wählen Sie nur eine Antwort aus.
 
 
 ;Please select as many answers as apply.
-Please select as many answers as apply.
+Bitte wählen Sie alle zutreffenden Antworten aus.
 
 
