Added {ok} tags for German survey1.lang
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@103719 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/de/survey1.lang
+++ b/de/survey1.lang
@@ -10,27 +10,27 @@ Zu welcher der folgenden Altersgruppen gehören Sie?
 
 
 ;16-24
-16-24
+16-24 {ok}
 
 
 ;25-34
-25-34
+25-34 {ok}
 
 
 ;35-44
-35-44
+35-44 {ok}
 
 
 ;45-54
-45-54
+45-54 {ok}
 
 
 ;55-64
-55-64
+55-64 {ok}
 
 
 ;65+
-65+
+65+ {ok}
 
 
 ;Please indicate your gender
@@ -50,23 +50,23 @@ Kann ich kurz überprüfen, welchen der folgenden Webbrowser Sie gerade auf Ihre
 
 
 ;Apple Safari
-Apple Safari
+Apple Safari {ok}
 
 
 ;Google Chrome
-Google Chrome
+Google Chrome {ok}
 
 
 ;Microsoft Internet Explorer
-Microsoft Internet Explorer
+Microsoft Internet Explorer {ok}
 
 
 ;Mozilla Firefox
-Mozilla Firefox
+Mozilla Firefox {ok}
 
 
 ;Opera
-Opera
+Opera {ok}
 
 
 ;Another browser
@@ -218,7 +218,7 @@ Der Firefox-Browser auf einem Android-Smartphone oder -Tablet
 
 
 ;Mozilla Persona
-Mozilla Persona
+Mozilla Persona {ok}
 
 
 ;An identity system that allows you to sign in to sites using an email address you choose.
