Fixes for German survey1.lang
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@103721 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/de/survey1.lang
+++ b/de/survey1.lang
@@ -46,7 +46,7 @@ Weiblich
 
 
 ;Can I just check, which of the following web browsers do you use on your desktop computer or laptop at the moment, either at home or at work?
-Kann ich kurz überprüfen, welchen der folgenden Webbrowser Sie gerade auf Ihrem Desktop-Rechner oder Laptop, zu Hause oder auf der Arbeit, verwenden?
+Kann ich kurz überprüfen, welche der folgenden Webbrowser Sie zur Zeit auf Ihrem Desktop-Rechner oder Laptop, zu Hause oder auf der Arbeit, verwenden?
 
 
 ;Apple Safari
@@ -246,7 +246,7 @@ Keiner davon
 
 
 ;Which if any of the following Firefox services are you using at the moment?
-Welchen der folgenden Firefox-Dienste verwenden Sie gerade, wenn überhaupt?
+Welche der folgenden Firefox-Dienste verwenden Sie gerade, wenn überhaupt?
 
 
 ;Based on these descriptions, which if any, would you be interested in using in the future?
