--- a/de/survey1.lang
+++ b/de/survey1.lang
@@ -45,7 +45,7 @@ Männlich
 Weiblich
 
 
-;Can I just check, which of the following web browsers do you use on your desktop computer or laptop at the moment, either at home or at work?
+;Which of the following web browsers do you use on your desktop computer or laptop at the moment, either at home or at work?
 Kann ich kurz überprüfen, welche der folgenden Webbrowser Sie zur Zeit auf Ihrem Desktop-Rechner oder Laptop, zu Hause oder auf der Arbeit, verwenden?
 
 
