Updated German translation of survey1.lang
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@103725 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/de/survey1.lang
+++ b/de/survey1.lang
@@ -46,7 +46,7 @@ Weiblich
 
 
 ;Which of the following web browsers do you use on your desktop computer or laptop at the moment, either at home or at work?
-Kann ich kurz überprüfen, welche der folgenden Webbrowser Sie zur Zeit auf Ihrem Desktop-Rechner oder Laptop, zu Hause oder auf der Arbeit, verwenden?
+Welche der folgenden Webbrowser verwenden Sie zur Zeit auf Ihrem Desktop-Rechner oder Laptop, zu Hause oder auf der Arbeit?
 
 
 ;Apple Safari
